# LLM

./: 24_1_attention_lab.ipynb  2_hw_word2vec.ipynb  IMDB Text Convolution.ipynb  config.yaml  hw2_preliminary_questions.md  hw2_text_classification.ipynb  linformers-experiments.py  matthieu_neau_hw_text_preprocessing.ipynb  pyproject.toml
