[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Matthieu <matthieu.neau@student-cs.fr>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.2"
tqdm = "^4.66.5"
googledrivedownloader = "^0.4"
requests = "^2.32.3"
matplotlib = "^3.9.2"
ipywidgets = "^8.1.5"
scipy = "^1.14.1"
torch = "^2.4.1"
tabulate = "^0.9.0"
datasets = "^3.0.1"
transformers = "^4.45.2"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
